unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/CMPL123__MDC_Acknowledgement_Entry__c.object-meta.xml
<CustomObject>
    <label>MDC Acknowledgement Entry</label>
    <nameField>
        <displayFormat>ACK-{0000}</displayFormat>
        <label>MDC Acknowledgement Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDC Acknowledgement Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>