unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__Comment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>