unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__Group_Members__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Group_Members__c</fullName>
        <label>Group Members</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>