unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__Is_Acknowledged__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Acknowledged</label>
        <type>Checkbox</type>
    </CustomField>