unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__MDC_Ticket__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__MDC_Ticket__c</fullName>
        <label>MDC Ticket</label>
        <referenceTo>CMPL123__MDC_Ticket__c</referenceTo>
        <relationshipLabel>MDC Acknowledgement Entries</relationshipLabel>
        <relationshipName>MDC_Acknowledgement_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>