unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__Number_Acknowledgments_Received__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Number_Acknowledgments_Received__c</fullName>
        <label>Number Acknowledgments Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>