unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__Required_Acknowledgments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Required_Acknowledgments__c</fullName>
        <label>Required Acknowledgments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>