unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__Type_Of_Acknowledgment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Type_Of_Acknowledgment__c</fullName>
        <label>Type Of Acknowledgment</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>