unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDC_Acknowledgement_Entries</relationshipName>
        <type>Lookup</type>
    </CustomField>