unpackaged/main/default/objects/CMPL123__MDC_Acknowledgement_Entry__c/fields/CMPL123__When_Acknowledged__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__When_Acknowledged__c</fullName>
        <label>When Acknowledged</label>
        <type>DateTime</type>
    </CustomField>